<resources>
    <string name="app_name">Zubbl</string>


    <!--Error Messages-->
    <string name="okay">OK</string>
    <string name="network_failure">Please check your internet connection</string>
    <string name="server_error">Internal server error</string>
    <string name="empty_firstname">Please enter your first name</string>
    <string name="empty_lastname">Please enter your last name</string>
    <string name="empty_eamil">Please enter your email </string>
    <string name="empty_age">please enter your age</string>
    <string name="empty_password">Please enter your password</string>
    <string name="empty_confirm">Please enter confirm password</string>
    <string name="firstName_invalid">First Name should have only Letters</string>
    <string name="email_invalid">Please enter valid email id</string>
    <string name="gender_invalid">Enable the Gender</string>
    <string name="dateofBirth">Please enter your valid age</string>
    <string name="invalid_password">Password should be of 8 characters with contain atleast 2 numbers and 2 alphabet</string>
    <string name="invalid_confirm">Password Mismatch</string>
    <string name="lastname_invalid">Last Name should have only Letters</string>
    <string name="features">The feature is one the way</string>

    <!--Splash Screen-->
    <string name="zubbl">zubbl</string>

    <!--MainActivity-->
    <string name="error_json">Please check your network connection.</string> <!--API returns a wrong JSON format-->
    <string name="ok_btn_txt">OK</string>
    <string name="close_btn_txt">CLOSE</string>
    <string name="loading_txt">loading…</string>

    <!--NetworkMessages-->
    <string name="network_invalid_title">Network unavailable</string>
    <string name="network_invalid">Network unavailable. Please connect to network.</string>

    <!--LoginActivity-->
    <string name="login_username">Email </string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="register">Register</string>
    <string name="login_forgotpassword">Forgot password?</string>
    <string name="remember_me">Remember Me</string>

    <!--ChangePasswordActivity-->
    <string name="changepassword_oldpass">Old Password</string>
    <string name="changepassword_newpass">New Password</string>
    <string name="changepassword_confirmpass">Confirm Password</string>

    <!--RegisterPageActivity -->
    <string name="register_firstname">First Name</string>
    <string name="register_lastname">Last Name</string>
    <string name="age">Age (Optional)</string>
    <string name="gender">Gender (Optional)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirmpassword">Confirm Password</string>

    <!--ForgotPasswordActivity Page -->
    <string name="forgetpassword_instruction">We just sent you the activation code to your Email address, Please check your inbox.</string>
    <string name="forgetpassword_success">The OTP has been send to your registered mail address</string>
    <string name="changepassword_success">Password Updated Successfully</string>
    <string name="confirm">Confirm</string>
    <string name="submit">Submit</string>
    <string name="send_otp">Enter OTP</string>
    <string name="forgotpassword_title">Forgot Password</string>
    <string name="forgot_email">Please enter your registered email</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="forgoteamil_error">Please enter your registered email address </string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="newpassword">New Password</string>
    <string name="otp_required">Please enter your  otp</string>
    <string name="resetPassword">Reset Password</string>
    <string name="otp">OTP</string>

    <!--SideMenu-->
    <string name="myoffers">My Offers</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="Logout">Logout</string>

    <!--Logout-->
    <string name="logout_message">Do you want to logout?</string>
    <string name="cancel_caps">CANCEL</string>
    <string name="confirm_caps">CONFIRM</string>

    <!--JOIN ZUBBL-->
    <string name="join">Join</string>
    <string name="totalpoints">Total Points</string>
    <string name="tap_ins">Total Tap-Ins</string>
    <string name="points">Points</string>
    <string name="connect">Connect</string>
    <string name="added">Added</string>
    
    <!--MY FEED-->
    <string name="myFeed">My Feed</string>
    <string name="nearby">Nearby</string>

    <!--LOCATION ERROR MESSAGES-->
    <string name="location_permission">Location Permission is Required</string>
    <string name="gps_enabled">Please Turn on Your Location</string>
    <string name="permission_denied">Permission Denied</string>

    <!--NODATA FOUND-->
    <string name="nodata_found">Try again</string>
    <string name="zero">0</string>
    
    <!--LEADERBOARD-->
    <string name="your_rank">Your Rank</string>
    <string name="next_rank">Next Rank</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="progress">Progress</string>

    <!--MYFEED-->
    <string name="nodata">No data found</string>
    
    <!--SETTING-->
    <string name="change_password">Change Password</string>
    <string name="termsandcondition">Terms &amp; Conditions</string>
    <string name="notification">Notification</string>
    <string name="setting_title">Settings</string>

</resources>






