<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <include
        android:id="@+id/actionbar_id"
        layout="@layout/action_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actionbar_id"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginStart="@dimen/marginLeft"
        android:layout_marginEnd="@dimen/marginLeft"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/forgotPassword_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_forgot_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextLabel"
                android:theme="@style/MyTextInputLayout"
                android:layout_marginTop="@dimen/paddingTopESmall"
                android:visibility="visible">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/forgot_emailaddress"
                    style="@style/registerEditText"
                    android:layout_marginTop="@dimen/paddingTopESmall"
                    android:paddingBottom="@dimen/paddingTopESmall"
                    android:inputType="textEmailAddress"
                    android:hint="@string/forgot_email"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/email_error_forgot"
                style="@style/commonErrorTextview"
                android:singleLine="false"
                android:visibility="gone"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_forgot_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextLabel"
                android:theme="@style/MyTextInputLayout"
                android:layout_marginTop="@dimen/paddingTopESmall"
                android:visibility="gone">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/forgot_otp"
                    style="@style/registerEditText"
                    android:paddingBottom="@dimen/paddingTopESmall"
                    android:layout_marginTop="@dimen/paddingTopESmall"
                    android:inputType="textEmailAddress"
                    android:hint="@string/send_otp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/otp_error_forgot"
                style="@style/commonErrorTextview"
                android:visibility="gone"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_forgot_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_otp"
                android:textColor="@color/blue"
                android:paddingTop="@dimen/marginBottom"
                android:paddingBottom="@dimen/marginBottom"
                android:fontFamily="@font/muli_bold"
                android:paddingStart="@dimen/marginBottom"
                android:paddingEnd="0dp"
                android:layout_gravity="end"
                android:visibility="gone"/>
        </LinearLayout>

        <!--CHANGE PASSWORD-->
        <LinearLayout
            android:id="@+id/changePassword_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyTextInputLayout"
                app:hintTextAppearance="@style/TextLabel"
                android:layout_marginTop="@dimen/paddingTopESmall">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/forgot_password"
                    style="@style/registerEditText"
                    android:layout_marginTop="@dimen/paddingTopESmall"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/paddingTopESmall"
                    android:hint="@string/newpassword"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/newPassword_error_forgot"
                style="@style/commonErrorTextview" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_forgot_confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyTextInputLayout"
                app:hintTextAppearance="@style/TextLabel"
                android:layout_marginTop="@dimen/paddingTopESmall">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/forgot_confirmpassword"
                    style="@style/registerEditText"
                    android:layout_marginTop="@dimen/paddingTopESmall"
                    android:paddingBottom="@dimen/paddingTopESmall"
                    android:inputType="textPassword"
                    android:hint="@string/register_confirmpassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/confirmPassword_error_forgot"
                style="@style/commonErrorTextview"
                android:visibility="gone"/>
        </LinearLayout>


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/btn_confirm_forgot"
            style="@style/commonBtnTextview"
            android:text="@string/submit"
            android:background="@drawable/login_btn_background"
            android:layout_marginTop="@dimen/marginTopLarge"/>
    </LinearLayout>
</RelativeLayout>

